<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="header_settings">Настройки</string>
    <string name="header_search">Поиск</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="users_assignment">Пользовательское соглашение</string>
    <string name="app_name_header">Playlist maker</string>
    <string name="android_practicum_course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">videtskih@yandex.ru</string>
    <string name="email_subject_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message_to_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="legal_practicum_offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="button_track_forward">Кнопка переход на трэк</string>
    <string name="nothing_not_found">Ничего не нашлось</string>
    <string name="network_error_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update_button">Обновить</string>
</resources>