<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="26dp"
            android:paddingHorizontal="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:text="@string/app_name_header"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/search_button"
            style="@style/main_activity_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

        <Button
            android:id="@+id/media_library_button"
            style="@style/main_activity_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/media_library"
            app:icon="@drawable/ic_library" />

        <Button
            android:id="@+id/settings_button"
            style="@style/main_activity_button"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />
    </LinearLayout>
</LinearLayout>